--- a/index.html
+++ b/index.html
@@ -10,31 +10,28 @@
       box-sizing: border-box;
     }
 
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
+      height: 100%;
       font-family: 'Inter', sans-serif;
-      background: #fff;
-      color: #111;
-      min-height: 100vh;
-      background-image: url('sisyphus.jpg');
-      background-size: contain;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
+    }
+
+    body {
+      background: url('sisyphus.jpg') no-repeat center center fixed;
+      background-size: cover;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 2rem;
-      text-align: center;
     }
 
     .overlay {
-      background-color: rgba(255, 255, 255, 0.9);
-      padding: 2rem;
+      background-color: rgba(255, 255, 255, 0.85);
+      padding: 2rem 2.5rem;
       border-radius: 12px;
-      max-width: 500px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+      text-align: center;
+      max-width: 480px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
     }
 
     h1 {
