--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sisyphus Fund</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     * {
       box-sizing: border-box;
+      margin: 0;
+      padding: 0;
     }
 
     html, body {
-      margin: 0;
-      padding: 0;
       height: 100%;
       font-family: 'Inter', sans-serif;
     }
@@ -23,41 +23,52 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      padding: 2rem;
     }
 
     .overlay {
-      background-color: rgba(255, 255, 255, 0.85);
-      padding: 2rem 2.5rem;
-      border-radius: 12px;
+      background: rgba(255, 255, 255, 0.5);
+      backdrop-filter: blur(20px);
+      -webkit-backdrop-filter: blur(20px);
+      padding: 2.5rem 3rem;
+      border-radius: 16px;
       text-align: center;
-      max-width: 480px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+      max-width: 500px;
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
+      animation: fadeIn 1.2s ease;
     }
 
     h1 {
-      font-size: 2.75rem;
+      font-size: 2.8rem;
       font-weight: 600;
       margin-bottom: 0.5rem;
+      color: #111;
     }
 
     p {
       font-size: 1.5rem;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1.8rem;
+      color: #222;
     }
 
     a.button {
       display: inline-block;
       padding: 0.75rem 1.5rem;
       background-color: #111;
-      color: #fff;
+      color: white;
       text-decoration: none;
-      border-radius: 6px;
+      border-radius: 8px;
       font-weight: 500;
       transition: background 0.2s ease;
     }
 
     a.button:hover {
       background-color: #333;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     @media (max-width: 600px) {
